# scsystem-api/docs/swagger.json
@@ -8,7 +8,26 @@
     },
     "basePath": "/",
     "paths": {
-        "/api/v1/auth/signin": {
+        "/common/healthcheck": {
+            "get": {
+                "description": "health check api server.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "common"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/auth/signin": {
             "post": {
                 "description": "Sign in account for admin.",
                 "consumes": [
@@ -41,7 +60,7 @@
                 }
             }
         },
-        "/api/v1/auth/signup": {
+        "/v1/auth/signup": {
             "post": {
                 "description": "Register account for admin.",
                 "consumes": [
@@ -74,7 +93,7 @@
                 }
             }
         },
-        "/api/v1/lab/activity": {
+        "/v1/lab/activity": {
             "post": {
                 "description": "Save activity type in/out.",
                 "consumes": [
@@ -105,7 +124,7 @@
                 }
             }
         },
-        "/api/v1/lab/history": {
+        "/v1/lab/history": {
             "get": {
                 "description": "Get History.",
                 "consumes": [
@@ -136,7 +155,7 @@
                 }
             }
         },
-        "/api/v1/lab/register": {
+        "/v1/lab/register": {
             "post": {
                 "description": "Register lab.",
                 "consumes": [
@@ -169,7 +188,7 @@
                 }
             }
         },
-        "/api/v1/lab/user": {
+        "/v1/lab/user": {
             "get": {
                 "description": "Get User for checkin.",
                 "consumes": [
@@ -203,101 +222,6 @@
                         "schema": {
                             "$ref": "#/definitions/schema.DataResponse"
                         }
-                    }
-                }
-            }
-        },
-        "/common/capture": {
-            "get": {
-                "description": "test sentry.io capture.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "common"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/common/email": {
-            "get": {
-                "description": "test email.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "common"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/common/healthcheck": {
-            "get": {
-                "description": "health check api server.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "common"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/common/sentry": {
-            "get": {
-                "description": "test sentry.io.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "common"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/common/workercheck": {
-            "get": {
-                "description": "health check worker.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "common"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     }
                 }
             }
