# scsystem-api/internal/api/controller/common.controller.go
@@ -20,13 +20,6 @@ func HealthCheck(c *fiber.Ctx) error {
 	})
 }
 
-// HealthCheck.
-// @Description health check worker.
-// @Tags common
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /common/workercheck [GET]
 func HealthCheckWorker(c *fiber.Ctx) error {
 	go service.HealthCheck()
 	return c.JSON(fiber.Map{
@@ -34,13 +27,6 @@ func HealthCheckWorker(c *fiber.Ctx) error {
 	})
 }
 
-// Email.
-// @Description test email.
-// @Tags common
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /common/email [GET]
 func Email(c *fiber.Ctx) error {
 	_, err := service.Email()
 	if err != nil {
@@ -53,24 +39,10 @@ func Email(c *fiber.Ctx) error {
 	})
 }
 
-// Sentry.
-// @Description test sentry.io.
-// @Tags common
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /common/sentry [GET]
 func Sentry(c *fiber.Ctx) error {
 	panic("y tho")
 }
 
-// Capture.
-// @Description test sentry.io capture.
-// @Tags common
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /common/capture [GET]
 func Capture(c *fiber.Ctx) error {
 	sentry.CaptureMessage(c, "User provided unwanted query string, but we recovered just fine")
 	return c.SendStatus(fiber.StatusOK)
